src/objects/MBA_Staging_Contact__c.object
<CustomObject>
    <description>Used for the integration between MBA and Salesforce. Fields are to be read only for all users and object is only visible to admins.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedAt__c</fullName>
        <description>For BMP only - when contact was deleted.</description>
        <label>Deleted At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For BMP only - deleted in BMP.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to notify the trigger code whether or not this staging record is for a paid subscription or not.</description>
        <inlineHelpText>Field to notify the trigger code whether or not this staging record is for a paid subscription or not.</inlineHelpText>
        <label>IsPaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAAccountID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Account ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAClientID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_External_Account_ID__c</fullName>
        <inlineHelpText>When processing a migrated account from another system, we need to process the record using the original ID.  Otherewise, a duplicate contact would be created.</inlineHelpText>
        <label>Original External Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_MBA_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary MBA Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of record</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>MBA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BMP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MBA Staging Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MSC-{0000}</displayFormat>
        <label>MBA Staging Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBA Staging Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>